# c-lib

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt  darray.c  darray.h  function-types.h  list.c  list.h  stack.c  stack.h
src/priv/: listpriv.h  stackpriv.h
test/: CMakeLists.txt  array_tests.c  array_tests.h  list_tests.c  stack_test.c  suites.h  unit_test.c
util/: new-file.py
